; ModuleID = '/home/carl/AnghaBench/tig/src/extr_options.c_set_encoding.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_options.c_set_encoding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.encoding = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"utf-8\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"utf8\00", align 1
@SUCCESS = common dso_local global i64 0, align 8
@encoding_arg = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.encoding**, i8*, i32)* @set_encoding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_encoding(%struct.encoding** %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.encoding**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.encoding** %0, %struct.encoding*** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i8*, i8** %5, align 8
  %8 = call i32 @strcasecmp(i8* %7, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @strcasecmp(i8* %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %10, %3
  br label %25

15:                                               ; preds = %10
  %16 = load %struct.encoding**, %struct.encoding*** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i64 @parse_encoding(%struct.encoding** %16, i8* %17, i32 %18)
  %20 = load i64, i64* @SUCCESS, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %15
  %23 = load i64*, i64** @encoding_arg, align 8
  %24 = getelementptr inbounds i64, i64* %23, i64 0
  store i64 0, i64* %24, align 8
  br label %25

25:                                               ; preds = %14, %22, %15
  ret void
}

declare dso_local i32 @strcasecmp(i8*, i8*) #1

declare dso_local i64 @parse_encoding(%struct.encoding**, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
